--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -13,98 +11,34 @@
             type="com.example.expenseappmvvm.screen.mainScreen.expenseScreen.ExpenseViewModel" />
     </data>
 
-    <ScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_expenses_nav"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/space_20dp"
+            android:gravity="top"
+            app:tabIndicatorHeight="0dp"
+            app:tabSelectedTextColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/vp_expenses"
+            app:tabBackground="@drawable/expense_selector" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/layout_show_expenses"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vp_expenses"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tab_expenses_nav"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="@dimen/space_11dp"/>
 
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/tab_expenses_nav"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/space_20dp"
-                    android:gravity="top"
-                    app:layout_constraintBottom_toTopOf="@+id/ll_current_balance_expenses"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:tabBackground="@drawable/expense_selector"
-                    app:tabSelectedTextColor="@color/white">
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="" />
-
-
-                </com.google.android.material.tabs.TabLayout>
-
-                <LinearLayout
-                    android:id="@+id/ll_current_balance_expenses"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/space_30dp"
-                    android:layout_marginVertical="@dimen/space_20dp"
-                    android:orientation="horizontal"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <TextView
-                        android:id="@+id/tv_current_balance_txt_expenses"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/space_5dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="@string/txt_total_expenses"
-                        android:textSize="@dimen/size_16sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/tv_current_balance_expenses"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/space_5dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:gravity="right"
-                        android:text="0"
-                        android:textSize="@dimen/size_16sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <com.github.mikephil.charting.charts.PieChart
-                    android:id="@+id/chart_expenses"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/space_300dp"
-                    android:layout_margin="10dp"
-                    app:layout_constraintBottom_toTopOf="@+id/rcv_expenses"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/ll_current_balance_expenses" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rcv_expenses"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/space_20dp"
-                    android:layout_marginVertical="@dimen/space_30dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:reverseLayout="true"
-                    app:stackFromEnd="true" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </FrameLayout>
-
-    </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
