--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/fragment_budget"
+        android:id="@+id/navigation_budget"
         android:icon="@drawable/navbar_budget"
         android:title="@string/nav_bar_budget" />
     <item
-        android:id="@+id/fragment_expense"
+        android:id="@+id/navigation_expense"
         android:icon="@drawable/navbar_expense"
         android:title="@string/nav_bar_expense" />
 
