--- a/app/src/main/res/layout/fragment_budget.xml
+++ b/app/src/main/res/layout/fragment_budget.xml
@@ -175,6 +175,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/space_300dp"
                 android:layout_margin="@dimen/space_5dp"
+                app:barChartData="@{viewModel.barData}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_budget_details" />
