--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -46,7 +46,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/tv_current_balance_expenses"
+                        android:id="@+id/tv_balance_expenses"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/space_5dp"
@@ -62,6 +62,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/space_300dp"
                     android:layout_margin="10dp"
+                    app:pieChartData="@{viewModel.pieDataSet}"
                     app:layout_constraintBottom_toTopOf="@+id/rcv_expenses"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
